# dipa

./: Cargo.toml  README.md
.github/workflows/: publish.yml
crates/dipa-derive/: Cargo.toml
crates/dipa-derive-test/: Cargo.toml
crates/dipa-derive/src/: dipa_attribute.rs  lib.rs  multi_variant_enum.rs  parsed_enum.rs  single_field_struct.rs  single_variant_enum.rs  test_utils.rs  zst_impl.rs
crates/dipa-derive/src/dipa_attribute/: field_batching_strategy.rs
crates/dipa-derive/src/multi_field_utils/: field_changes.rs  struct_or_tuple_field.rs
crates/dipa-derive/src/multi_field_utils/field_changes/: all_combinations.rs
crates/dipa-derive/src/multi_field_utils/struct_or_tuple_field/: generate_delta_type.rs
crates/dipa-derive/src/multi_field_utils/struct_or_tuple_field/generate_delta_type/: no_batching.rs  one_batch.rs
crates/dipa-derive/src/parsed_enum/: enum_variant.rs  generate_associated_types.rs  generate_patch_enum_tokens.rs
crates/dipa-derive/src/parsed_enum/enum_variant/: diff_enum_variants.rs  diff_type_variants.rs  enum_variant_fields.rs  patch_enum_variants.rs
crates/dipa-derive/src/parsed_enum/generate_dipa_impl/: single_variant_enum.rs
crates/dipa-derive/src/parsed_enum/generate_dipa_impl/single_variant_enum/: generate_one_batch_apply_patch_tokens.rs  generate_one_batch_create_delta_tokens.rs
crates/dipa-derive/src/parsed_struct/: validate_attributes.rs
crates/dipa-derive/src/parsed_struct/generate_dipa_impl/: multi_field_struct.rs
crates/dipa-derive/src/parsed_struct/generate_dipa_impl/multi_field_struct/: generate_no_batching_apply_patch_tokens.rs  generate_no_batching_create_delta_tokens.rs
src/: dipa_impl_tester.rs  lib.rs  sequence.rs
src/sequence/: sequence_delta_patch_towards.rs
