[package]
name = "cumulo-dipa"
version = "0.1.1"
description = "dipa makes it easy to efficiently delta encode large Rust data structures."
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
keywords = ["delta", "encode", "compress", "diff", "patch"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Cumulo/dipa"

build = "build.rs"

[features]
derive = ["dipa-derive"]
impl-tester = ["bincode"]

[dependencies]
bincode = {optional = true, version = "1.3"}
serde = {version = "1", features = ["derive"]}

# Optional Dependencies
cumulo-dipa-derive = {optional = true, version = "0.1", path = "./crates/dipa-derive", package = "cumulo-dipa-derive"}

[dev-dependencies]
bincode = "1.3"

[workspace]
members = [
    "crates/dipa-derive",
    "crates/dipa-derive-test",
]
