[package]
name = "dipa-derive-test"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
publish = []

[dependencies]
cumulo-dipa = {path = "../../", features = ["impl-tester"], package = "cumulo-dipa"}
dipa-derive = {path = "../dipa-derive", package = "cumulo-dipa-derive"}
trybuild = "1.0"
serde = {version = "1", features = ["derive"]}